--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 body {
-  margin: 0;
+  box-sizing: content-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(assets/img/backgroun4.jpg);
+  background-size: cover;
+  height: 100vh; 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 code {
